Text Description and gap Issue Resolved

--- a/style.css
+++ b/style.css
@@ -102,6 +102,7 @@ nav a:hover {
     border: 2px solid #ffcc00;
     border-radius: 8px;
     width: 60%;
+    margin-top: 10%;
     padding: 15px;
     margin-bottom: 20px;
     text-align: center;
@@ -119,6 +120,6 @@ nav a:hover {
 }
 
 .movie-description, .movie-review {
-    font-size: 14px;
+    font-size: 16px;
     line-height: 1.6;
 }
